--- a/Biomass_speciesParameters.Rmd
+++ b/Biomass_speciesParameters.Rmd
@@ -62,9 +62,9 @@ download.file(url = paste0("https://img.shields.io/badge/Biomass_speciesParamete
               mode = 'wb')
 ```
 
-[![module-version-Badge](figures/moduleVersionBadge.png)](https://github.com/CeresBarros/Biomass_speciesParameters/commit/9250d68f905b8828d7965c733ab436e8a01fdf17)
+[![module-version-Badge](`r normalizePath('figures/moduleVersionBadge.png')`)](https://github.com/CeresBarros/Biomass_speciesParameters/commit/9250d68f905b8828d7965c733ab436e8a01fdf17)
 
-[![Issues-badge](figures/issuesBadge.png)](https://github.com/PredictiveEcology/Biomass_speciesParameters/issues)
+[![Issues-badge](`r normalizePath('figures/issuesBadge.png')`)](https://github.com/PredictiveEcology/Biomass_speciesParameters/issues)
 
 <!-- if knitting to pdf remember to add the pandoc_args: ["--extract-media", "."] option to yml in order to get the badge images -->
 
