--- a/Biomass_speciesParameters.Rmd
+++ b/Biomass_speciesParameters.Rmd
@@ -119,37 +119,37 @@ link above\^\^**
 
 ### Summary
 
-LandR *Biomass_speciesParameters* (hereafter *Biomass_speciesParameters*) calibrates species growth and mortality trait values used
-in *Biomass_core*, by matching theoretical species' growth curves obtained with
-different trait values (see [Simulated species data](#bsppparam-simdata)) against observed 
-growth curves derived from Permanent Sample Plots (PSP data) across Canada 
-(see [Permanent sample plot data](#bsppparam-PSPdata)), to
-find the combination of traits that allows a better match to the observed
-curves. 
+LandR *Biomass_speciesParameters* (hereafter *Biomass_speciesParameters*)
+calibrates species growth and mortality trait values used in *Biomass_core*, by
+matching theoretical species' growth curves obtained with different trait values
+(see [Simulated species data](#bsppparam-simdata)) against observed growth
+curves derived from Permanent Sample Plots (PSP data) across Canada (see
+[Permanent sample plot data](#bsppparam-PSPdata)), to find the combination of
+traits that allows a better match to the observed curves.
 
-In particular, it directly calibrates the `growthcurve`, `mortalityshape` invariant
-species traits and two new traits `inflationFactor` and `mANPPproportion` that are
-used to calibrate previously estimated species maximum biomass (`maxB`) and maximum
-aboveground net primary productivity (`maxANPP`) values 
-(see [Parameter estimation/calibration](#bsppparam-calib)).
+In particular, it directly calibrates the `growthcurve`, `mortalityshape`
+invariant species traits and two new traits `inflationFactor` and
+`mANPPproportion` that are used to calibrate previously estimated species
+maximum biomass (`maxB`) and maximum aboveground net primary productivity
+(`maxANPP`) values (see [Parameter estimation/calibration](#bsppparam-calib)).
 
 This module **will not** obtain other traits or parameters used in
 *Biomass_core* and so must be used in conjunction with another data/calibration
-module that does so (e.g., *Biomass_borealDataPrep*). 
+module that does so (e.g., *Biomass_borealDataPrep*).
 
-It can however be used stand-alone in an initial developmental phase 
-for easier inspection of the statistical calibration procedure employed.
+It can however be used stand-alone in an initial developmental phase for easier
+inspection of the statistical calibration procedure employed.
 
 As of `r Sys.Date()`, the raw PSP data needed for this module is not freely
 available, and data sharing agreements must be obtained from the governments of
-SK, AB, and BC.
-The processed and anonymized PSP data is however provided via a Google Drive 
-folder that is accessed automatically by the module.
+SK, AB, and BC. The processed and anonymized PSP data is however provided via a
+Google Drive folder that is accessed automatically by the module.
 
-**A Google Account is therefore necessary to access the data used for calibration.**
+**A Google Account is therefore necessary to access the data used for
+calibration.**
 
-If you do not have a Google Account, or cannot access the data, please
-report an issue by clicking on the "Get help" link above.
+If you do not have a Google Account, or cannot access the data, please report an
+issue by clicking on the "Get help" link above.
 
 ### Links to other modules {bsppparam-links-modules}
 
@@ -161,14 +161,14 @@ available modules in the LandR ecosystem and select *Biomass_speciesParameters*
 from the drop-down menu to see potential linkages.
 
 -   [*Biomass_borealDataPrep*](https://github.com/PredictiveEcology/Biomass_borealDataPrep):
-    prepares all parameters and inputs (including initial landscape conditions)
-    that *Biomass_core* needs to run a realistic simulation. Default values/inputs
-    produced are relevant for boreal forests of Western Canada. Used 
-    upstream from *Biomass_speciesParameters*;
+prepares all parameters and inputs (including initial landscape conditions)
+that *Biomass_core* needs to run a realistic simulation. Default
+values/inputs produced are relevant for boreal forests of Western Canada.
+Used upstream from *Biomass_speciesParameters*;
 
--   [*Biomass_core*](https://github.com/PredictiveEcology/Biomass_core):
-core forest dynamics simulation module. Used
-downstream from *Biomass_speciesParameters*;
+-   [*Biomass_core*](https://github.com/PredictiveEcology/Biomass_core): core
+forest dynamics simulation module. Used downstream from
+*Biomass_speciesParameters*;
 
 ## Module manual
 
@@ -177,30 +177,31 @@ downstream from *Biomass_speciesParameters*;
 Tree cohort growth and mortality in *Biomass_core* are essentially determined by
 five parameters: the invariant species traits 'growth curve' (`growthcurve`),
 'mortality shape', (`mortalityshape`) and `longevity`, and the spatio-temporally
-varying traits maximum biomass (`maxB`) and maximum aboveground net primary productivity (`maxANPP`).
+varying traits maximum biomass (`maxB`) and maximum aboveground net primary
+productivity (`maxANPP`).
 
-All five traits strongly modulate the shape of species growth curves and so it 
+All five traits strongly modulate the shape of species growth curves and so it
 is important that they are calibrated to the study area in question.
 
 Also, the growth and mortality equations used in *Biomass_core* are non-linear
 and their resulting actual biomass accumulation curve is an emergent phenomenon
 due to competition effects. This means that the ideal trait/parameter values
-should not be estimated on pure single species growth conditions,
-as their resulting dynamics will be different under in a multi-species context.
+should not be estimated on pure single species growth conditions, as their
+resulting dynamics will be different under in a multi-species context.
 
 The *Biomass_speciesParameters* module attempts to address these issues (at
-least partially) using a "curve-matching" approach. It compares a GAMM
-fitted to permanent sample plot (PSP) data to a large collection of theoretical 
-species curves, each representing a different set of growth and mortality parameters.
-This also provides a means to calibrate these traits using a dataset that is 
-independent from the one used to derive initial landscape conditions and initial 
+least partially) using a "curve-matching" approach. It compares a GAMM fitted to
+permanent sample plot (PSP) data to a large collection of theoretical species
+curves, each representing a different set of growth and mortality parameters.
+This also provides a means to calibrate these traits using a dataset that is
+independent from the one used to derive initial landscape conditions and initial
 values of `maxB` and `maxANPP`.
 
-While `longevity` is adjusted using published values (see *Biomass_borealDataPrep* manual), 
-the remaining four parameters are calibrated using the PSP data. Hence, 
-*Biomass_speciesParameters* generally follows other data modules,
-like *Biomass_boreaDataPrep*, that prepare other traits such as `longevity`,
-`maxB` and `maxANPP`.
+While `longevity` is adjusted using published values (see
+*Biomass_borealDataPrep* manual), the remaining four parameters are calibrated
+using the PSP data. Hence, *Biomass_speciesParameters* generally follows other
+data modules, like *Biomass_boreaDataPrep*, that prepare other traits such as
+`longevity`, `maxB` and `maxANPP`.
 
 #### Permanent sample plot data {#bsppparam-PSPdata}
 
@@ -208,12 +209,12 @@ like *Biomass_boreaDataPrep*, that prepare other traits such as `longevity`,
 span several thousands of kilometres), or select the data based on a polygon
 (`studyAreaANPP`; see [List of input objects](bsppparam-inputs-list)).
 
-The default PSP data were initially obtained from the National Forest Inventory (NFI),
-the Alberta Ministry of Agriculture, the Saskatchewan Ministry of the
-Environment, and the British Columbian Ministry of Forests, treated for errors 
-and standardized into a single data set with the exact location and identifying 
-attributes anonymized. We only share the anonymized dataset, as the 
-data sharing agreements must be met to utilise the raw data.
+The default PSP data were initially obtained from the National Forest Inventory
+(NFI), the Alberta Ministry of Agriculture, the Saskatchewan Ministry of the
+Environment, and the British Columbian Ministry of Forests, treated for errors
+and standardized into a single data set with the exact location and identifying
+attributes anonymized. We only share the anonymized dataset, as the data sharing
+agreements must be met to utilise the raw data.
 
 The data include individual species, diameter at breast height (DBH), and
 sometimes tree height measurements for each tree in a plot, as well as stand
@@ -226,70 +227,71 @@ the `P(sim)$biomassModel` module parameter.
 
 #### Simulated species data {#bsppparam-simdata}
 
-The *Biomass_speciesFactorial* module was used to create a library of theoretical
-species curves (biomass accumulation curves, to be more precise) to which the 
-empirical species curves derived from PSP-biomass are matched for each
-species trait combination in the study area landscape. The library of
-curves are created by running *Biomass_core* with no reproduction, competition,
+The *Biomass_speciesFactorial* module was used to create a library of
+theoretical species curves (biomass accumulation curves, to be more precise) to
+which the empirical species curves derived from PSP-biomass are matched for each
+species trait combination in the study area landscape. The library of curves are
+created by running *Biomass_core* with no reproduction, competition,
 disturbance, or dispersal effects, on the study area. This cohort data table is
-the table coming out of *Biomass_borealDataPrep* with each simulation varied in the
-combination of species trait values that influence growth and mortality
-dynamics, namely: `growthcurve`, `mortalityshape`, `longevity`, `maxANPP` and 
-maximum biomass (`maxBiomass`, not to be confused with the data-driven `maxB` 
+the table coming out of *Biomass_borealDataPrep* with each simulation varied in
+the combination of species trait values that influence growth and mortality
+dynamics, namely: `growthcurve`, `mortalityshape`, `longevity`, `maxANPP` and
+maximum biomass (`maxBiomass`, not to be confused with the data-driven `maxB`
 which is later calibrated).
 
-The values for `maxB` (the calibrated parameter) and `maxANPP` were explored via the `mANPPproportion`,
-the ratio of `maxANPP` to `maxBiomass` (the parameter used for theroetical curves), 
-as it reflects their relationship. 
+The values for `maxB` (the calibrated parameter) and `maxANPP` were explored via
+the `mANPPproportion`, the ratio of `maxANPP` to `maxBiomass` (the parameter
+used for theroetical curves), as it reflects their relationship.
 
-`growthcurve` values varied from 0 to 1, in increments of 0.1;
-`mortalityshape` varied from 5 to 25, in increments of 1; `longevity` varied from
-150 to 700 in increments of 25; `mANPPproportion` varied from 0.25 to 10 in
-increments of 0.25. `maxBiomass` was held constant at 5000.
+`growthcurve` values varied from 0 to 1, in increments of 0.1; `mortalityshape`
+varied from 5 to 25, in increments of 1; `longevity` varied from 150 to 700 in
+increments of 25; `mANPPproportion` varied from 0.25 to 10 in increments of
+0.25. `maxBiomass` was held constant at 5000.
 
 This resulted in over 64,000,000 theoretical curves.
 
 Results from these simulations were compiled into a table (`cohortDataFactorial`
-; see [List of input objects](bsppparam-inputs-list)) that is accessed by *Biomass_speciesParameters*, so that
-the module can be run without needing to re-simulate the theoretical curves.
+; see [List of input objects](bsppparam-inputs-list)) that is accessed by
+*Biomass_speciesParameters*, so that the module can be run without needing to
+re-simulate the theoretical curves.
 
 #### Parameter estimation/calibration {#bsppparam-calib}
 
-*Biomass_speciesParameters* calibrates `growthcurve`, `mortalityshape` and `mANPPproportion` 
-by matching the theoretical species curves produced by *Biomass_speciesFactorial* 
-(`cohortDataFactorial` object) against observed species growth curves from permanent 
-sample plot (PSP) data.
+*Biomass_speciesParameters* calibrates `growthcurve`, `mortalityshape` and
+`mANPPproportion` by matching the theoretical species curves produced by
+*Biomass_speciesFactorial* (`cohortDataFactorial` object) against observed
+species growth curves from permanent sample plot (PSP) data.
 
-Before fitting the *observed* species growth curves, the module subsets the
-PSP data to stand ages below the 95th percent quantile for all species (this can
-be changed via the `P(sim)$quantileAgeSubset` module parameter), as records for
+Before fitting the *observed* species growth curves, the module subsets the PSP
+data to stand ages below the 95th percent quantile for all species (this can be
+changed via the `P(sim)$quantileAgeSubset` module parameter), as records for
 larger age classes were limited and constituted statistical outliers. In some
 species, changing the quantile value may improve results, however. Two examples
 are *Pinus banksiana* and *Populus sp*, for which using the 99th percent
 quantile improved the models, because these are short-lived species for which
 data at advanced ages is scarce.
 
-The module attempts to use stands where the focal species is dominant (but not monocultures)
-to estimate parameters, while balancing sample size (see biomass weighting below).
-Hence, for a given species, it only includes plots where the species' relative biomass is at least 50%. 
-This is, when calibrating *Populus tremuloides* traits, PSP daa plots are only 
-included if 50% of the stand biomass is composed of *P. tremuloides*.
+The module attempts to use stands where the focal species is dominant (but not
+monocultures) to estimate parameters, while balancing sample size (see biomass
+weighting below). Hence, for a given species, it only includes plots where the
+species' relative biomass is at least 50%. This is, when calibrating *Populus
+tremuloides* traits, PSP daa plots are only included if 50% of the stand biomass
+is composed of *P. tremuloides*.
 
 In addition, 50 points are added at the origin (age = 0 and biomass = 0) to
 force the intercept to be essentially 0 age and 0 biomass.
 
-Observed growth curves for each species are then fit using generalized
-additive mixed models (GAMMs) that relate species biomass ($B$) with stand age
+Observed growth curves for each species are then fit using generalized additive
+mixed models (GAMMs) that relate species biomass ($B$) with stand age
 ($standAge$), accounting for the random effects of the measurement year
 ($measureYear$) and plot ($plotID$) on the intercept:
 
 ```{=tex}
 \begin{equation}
-  B \sim f_{1}(standAge) + (\sim 1 | measureYear + plotID)
-  (\#eq:GAMM)
+B \sim f_{1}(standAge) + (\sim 1 | measureYear + plotID)
+(\#eq:GAMM)
 \end{equation}
 ```
-
 where $f_{1}$ denotes the smoother function. To avoid overfitting, the module
 constrains the smoother on stand age to a maximum smoothing degree of 3 (i.e. 3
 knots and a polynomial degree of 2) and a point constraint at 0 that attempts to
@@ -304,25 +306,23 @@ and 2) dividing the species average biomass by the average biomass across all
 
 ```{=tex}
 \begin{equation}
-  \frac{\overline{\rm domSpeciesB_{1}}}{\overline{\rm allDomSpeciesB}}
-  (\#eq:Bweights)
+\frac{\overline{\rm domSpeciesB_{1}}}{\overline{\rm allDomSpeciesB}}
+(\#eq:Bweights)
 \end{equation}
 ```
-
 For the added 0 age and 0 biomass data the module uses weights equal to 1.
 
 It is possible that some selected species do not have enough data to allow for
 model convergence. In this case, *Biomass_speciesParameters* skips trait
 calibration, and values remain unchanged.
 
-After fitting each species GAMM, *Biomass_speciesParameters* compares it
-to the theoretical curves obtained with a `longevity` value that matches the 
-focal species longevity, and picks the best one based on maximum likelihood.
-This best theoretical curve will be associated with a given combination of
-`growthcurve`, `mortalityshape` and `mANPPproportion` values, which are then
-used directly as the calibrated values, in case of `growthcurve` and
-`mortalityshape`, or to calibrate `maxANPP` in the case of `mANPPproportion`
-(see below).
+After fitting each species GAMM, *Biomass_speciesParameters* compares it to the
+theoretical curves obtained with a `longevity` value that matches the focal
+species longevity, and picks the best one based on maximum likelihood. This best
+theoretical curve will be associated with a given combination of `growthcurve`,
+`mortalityshape` and `mANPPproportion` values, which are then used directly as
+the calibrated values, in case of `growthcurve` and `mortalityshape`, or to
+calibrate `maxANPP` in the case of `mANPPproportion` (see below).
 
 The user has the option to constrain the values of the `growthcurve` and
 `mortalityshape` parameters. By default, `growthcurve` is forced to 0.5,
@@ -343,37 +343,36 @@ asymptotic limit that reflects the potential maximum biomass for a species in an
 ecolocation (ecological zone and land cover combination).
 
 *Biomass_speciesParameters* uses the ratio between the potential maximum biomass
-(`maxBiomass`, always 5000) to the achieved maximum biomass in the theoretical curves,
-to rescale `maxB`. This ratio is called the `inflationFactor` and it is 
-multiplied by `maxB` values previously estimated from data (e.g.
-by *Biomass_borealDataPrep*). This way, species simulated in
-*Biomass_core* are able to achieve the maximum observed biomasses used to
-*initially* estimate `maxB`.
+(`maxBiomass`, always 5000) to the achieved maximum biomass in the theoretical
+curves, to rescale `maxB`. This ratio is called the `inflationFactor` and it is
+multiplied by `maxB` values previously estimated from data (e.g. by
+*Biomass_borealDataPrep*). This way, species simulated in *Biomass_core* are
+able to achieve the maximum observed biomasses used to *initially* estimate
+`maxB`.
 
 Finally, the module calibrates `maxANPP` using the `mANPPproportion` value from
 the best matching theoretical growth curve as:
 
 ```{=tex}
 \begin{equation}
-  maxB \times \frac{mANPPproportion}{100}
-  (\#eq:maxANPPcalib)
+maxB \times \frac{mANPPproportion}{100}
+(\#eq:maxANPPcalib)
 \end{equation}
 ```
-
 where `maxB` is the already calibrated version. As already stated above, the
 final `maxANPP` value is then constrained between 2.0 and 5.0 by default.
 
-In cases where insufficient PSP data prevent fitting the GAMMs and performing the calibration,
-`mANPPproportion` defaults to 3.33 (the value used in LANDIS-II applications in 
-Canada's boreal forests) and the `inflationFactor` to 1. 
+In cases where insufficient PSP data prevent fitting the GAMMs and performing
+the calibration, `mANPPproportion` defaults to 3.33 (the value used in LANDIS-II
+applications in Canada's boreal forests) and the `inflationFactor` to 1.
 
-#### List of input objects {bsppparam-inputs-list}
+### List of input objects {bsppparam-inputs-list}
 
-The full list of input objects required by the module is presented below 
-(Table \@ref(tab:moduleInputs2-Biomass-speciesParameters)). The only inputs that 
-**must** be provided is `studyAreaANPP` (the study area used extract the PSP data from). 
-All other input objects have internal defaults, but the user may need to request
-access to their online files.
+The full list of input objects required by the module is presented below (Table
+\@ref(tab:moduleInputs2-Biomass-speciesParameters)). The only inputs that
+**must** be provided is `studyAreaANPP` (the study area used extract the PSP
+data from). All other input objects have internal defaults, but the user may
+need to request access to their online files.
 
 Of these inputs, the following are particularly important and deserve special
 attention:
@@ -381,59 +380,57 @@ attention:
 **Spatial layers**
 
 -   `studyAreaANPP` -- shapefile. A `SpatialPolygonsDataFrame` with a single
-polygon determining the where the PSP should be subset to simulation
-will take place. This input object **must be supplied by the user**.
+polygon determining the where the PSP should be subset to simulation will
+take place. This input object **must be supplied by the user**.
 
 **Tables**
 
 -   `factorialSpeciesTable` and `reducedFactorialCohortData` -- a tables of
 species trait combinations and the theoretical species grwoth curve data
 (respectively)
--   `PSPmeasure`, `PSPplot` and `PSPgis` -- tree measurement, biomass growth
-and geographical data of the PSP datasets used to buildi observed
-species growth curves.
--   `species` -- a table of invariant species traits that may have been
-produced by another module. It **must** contain the columns 'species',
-'growthcurve' and 'mortality shape', whose values will be calibrated.
+-   `PSPmeasure`, `PSPplot` and `PSPgis` -- tree measurement, biomass growth and
+geographical data of the PSP datasets used to buildi observed species growth
+curves.
+-   `species` -- a table of invariant species traits that may have been produced
+by another module. It **must** contain the columns 'species', 'growthcurve'
+and 'mortality shape', whose values will be calibrated.
 -   `speciesEcoregion` -- table of spatially-varying species traits that may
 have been produced by another module. It **must** contain the columns
-'speciesCode', 'maxB' and 'maxANPP' and 'ecoregionGroup' (the
-ecolocation ID). 'maxB' and 'maxANPP' values will be calibrated by
-species.
+'speciesCode', 'maxB' and 'maxANPP' and 'ecoregionGroup' (the ecolocation
+ID). 'maxB' and 'maxANPP' values will be calibrated by species.
 
-```{r moduleInputs2-Biomass-speciesParameters, echo = FALSE, eval = TRUE, message = FALSE}
+```{r moduleInputs2-Biomass-speciesParameters, cache.rebuild = TRUE, echo = FALSE, eval = TRUE, message = FALSE}
 df_inputs <- SpaDES.core::moduleInputs("Biomass_speciesParameters", "..")
 knitr::kable(df_inputs, 
              caption = "List of (ref:Biomass-speciesParameters) input objects and their description.") %>%
   kableExtra::kable_styling(latex_options = c("scale_down", "repeat_header"), full_width = TRUE)
 ```
 
-#### List of parameters {bsppparam-params-list}
+### List of parameters {bsppparam-params-list}
 
-The full list of parameters used by the module is presented below (Table 
-\@ref(tab:moduleParams2-Biomass-speciesParameters)), all of which have default 
+The full list of parameters used by the module is presented below (Table
+\@ref(tab:moduleParams2-Biomass-speciesParameters)), all of which have default
 values specified in the module's metadata.
 
 Of these parameters, the following are particularly important:
 
 **Calibration parameters**
 
--   `GAMMiterations` and `GAMMknots` -- control the number of iterattions
-and smoother degree used to fit the GAMMs, respectively.
+-   `GAMMiterations` and `GAMMknots` -- control the number of iterattions and
+smoother degree used to fit the GAMMs, respectively.
 
--   `constrainGrowthCurve`, `constrainMortalityShape` and `constrainMaxANPP`
--- determine the upper and lower boundaries of the calibrated values of
+-   `constrainGrowthCurve`, `constrainMortalityShape` and `constrainMaxANPP` --
+determine the upper and lower boundaries of the calibrated values of
 `growthcurve`, `mortalityshape` and `maxANPP`, respectively.
 
 **Data processing**
 
--   `minimumPlotsPerGamm` -- define a minimum number of PSP plots needed to
-fit the GAMMs.
+-   `minimumPlotsPerGamm` -- define a minimum number of PSP plots needed to fit
+the GAMMs.
 
 -   `PSPperiod` -- PSP data period to use.
 
 -   `quantileAgeSubset` -- upper quantile age value used to subset PSP data.
-
 
 ```{r moduleParams2-Biomass-speciesParameters, echo = FALSE, eval = TRUE, message = FALSE}
 df_params <- SpaDES.core::moduleParams("Biomass_speciesParameters", "..")
@@ -442,11 +439,12 @@ knitr::kable(df_params,
   kableExtra::kable_styling(latex_options = c("scale_down", "repeat_header"), full_width = TRUE)
 ```
 
-#### List of outputs {bsppparam-outputs-list}
+### List of outputs {bsppparam-outputs-list}
 
-The module produces the following outputs (Table \@ref(tab:moduleOutputs-Biomass-borealDataPrep)).
-Note that `species` and `speciesEcoregion` are modified versions of the inputed objects
-with the same name.
+The module produces the following outputs (Table
+\@ref(tab:moduleOutputs-Biomass-borealDataPrep)). Note that `species` and
+`speciesEcoregion` are modified versions of the inputed objects with the same
+name.
 
 **Tables**
 
@@ -469,30 +467,30 @@ there is an active internet connection and the user has access to the data (and
 a Google Account to do so).
 
 We advise future users to run *Biomass_speciesParameters* with defaults and
-inspect what the objects are like before supplying their own data. The user 
-does not need to run *Biomass_speciesFactorial* to generate their own theoretical 
-curves (unless they wish to), as the module accesses a pre-generated on-line 
-library with these simulated data. 
+inspect what the objects are like before supplying their own data. The user does
+not need to run *Biomass_speciesFactorial* to generate their own theoretical
+curves (unless they wish to), as the module accesses a pre-generated on-line
+library with these simulated data.
 
-Note that this module only runs once (in one "time step") and only executes one event
-(`init`). The general flow of *Biomass_speciesParameters* processes is:
+Note that this module only runs once (in one "time step") and only executes one
+event (`init`). The general flow of *Biomass_speciesParameters* processes is:
 
 1.  Preparation of all necessary data and input objects that do not require
-    parameter fitting (e.g., the theoretical species growth curve data);
+parameter fitting (e.g., the theoretical species growth curve data);
 
 2.  Sub-setting PSP data and calculating the observed species growth curves
-    using GAMMs;
+using GAMMs;
 
 3.  Finding the theoretical species growth curve that best matches the observed
-    curve, for each species, within curves produced with similar longevity
-    values to those in the species traits table (`species`) and with
-    `growthcurve` and `mortalityshape` values within the chosen boundaries
-    (`P(sim)$constrainGrowthCurve`, `P(sim)$constrainMortalityShape`);
+curve, for each species, within curves produced with similar longevity
+values to those in the species traits table (`species`) and with
+`growthcurve` and `mortalityshape` values within the chosen boundaries
+(`P(sim)$constrainGrowthCurve`, `P(sim)$constrainMortalityShape`);
 
 4.  Calibrating `maxB` and `maxANPP`
 
 5.  Adjusting `maxANPP` to match the chosen boundaries
-    (`P(sim)$constrainMaxANPP`)
+(`P(sim)$constrainMaxANPP`)
 
 ## Usage example {bsppparam-example}
 
@@ -500,7 +498,7 @@ This module can be run stand-alone, but it won't do much more than calibrate
 species trait values based on dummy input trait values. We provide an example of
 this below, since it may be of value to run the module by itself to become
 acquainted with the calibration process and explore the fitted GAMMs. However,
-we remind that to run this example you will need a Google Account, and access to 
+we remind that to run this example you will need a Google Account, and access to
 the data may need to be granted.
 
 A realistic usage example of this module and a few others can be found in [this
@@ -548,7 +546,7 @@ modules <- list("Biomass_speciesParameters")
 #the purpose of this table is experiment with modify longevity - longevity is not estimated by the module
 #but it is used in trait estimation. 
 inputSpecies <- data.table(species = c("Abie_bal", 'Abie_las', 'Betu_pap', 'Lari_lar',
-                                        'Pice_eng', 'Pice_gla', 'Pice_mar', 'Pinu_ban',
+                                       'Pice_eng', 'Pice_gla', 'Pice_mar', 'Pinu_ban',
                                        'Pinu_con', 'Pseu_men', "Popu_tre"),
                            longevity = c(300, 300, 170, 170, 330, 250, 250, 175, 300, 600, 200),
                            mortalityshape = 15, growthcurve = 0)
